@@ -1,3 +1,10 @@
+Fri Mar  7 03:45:12 2003  Tim Janik  <timj@gtk.org>
+
+	* sfitime.c (sfi_time_to_string): clamp argument into sfi's
+	min and max time.
+
+	* testsfi.c (test_time): added few more tests.
+
 Tue Feb 18 16:39:38 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfimemory.c sfinote.c sfiprimitives.c sfithreads.c sfitypes.c
